--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "money-guard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/ellamm/money-guard/",
+  "homepage": "https://github.com/money-guard/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
